--- a/travelRecommendation/travel_recommendation.css
+++ b/travelRecommendation/travel_recommendation.css
@@ -33,7 +33,7 @@ nav {
  }
 
  #introduction {
-   padding: 250px 1800px 250px 250px;
+   padding: 250px 1000px 250px 250px;
    word-wrap: normal;
  }   
 
@@ -42,3 +42,20 @@ nav {
     text-align: center;
  }
 
+ #aboutUs {
+    padding: 250px 1000px 0px 250px;
+    word-wrap: normal;
+  }   
+
+  #ourTeam {
+    display: flex;
+    align-items: flex-start;
+    padding: 50px 1000px 250px 250px;
+    word-wrap: normal;
+  }   
+
+  #teamMember {
+    display: flex;
+    padding-left: 100px;
+    padding-right: 20px;
+  }
